Fix game embeds selector in forum on mobile

--- a/ui/site/css/forum/_post.scss
+++ b/ui/site/css/forum/_post.scss
@@ -97,7 +97,7 @@
 
       margin: $block-gap auto;
 
-      .embed--game {
+      &.embed--game {
         @extend %game-embed;
       }
     }
